# enhanced-vertigo-logger-stage2

./: .dockerignore  .gitignore  ACCOUNT_SWITCH_INSTRUCTIONS.md  Cargo.toml  DATABASE_SETUP.md  DEVELOPMENT_HANDOFF.md  Dockerfile  Dockerfile.railway  PENDING_ITEMS.md  PROGRESS.md  README.md  STAGE1_COMPLETION_SUMMARY.md  STAGE2_COMPLETION_SUMMARY.md  STAGE2_PLANNING.md  TEST_RESULTS.md  migrate_to_postgres.sql  netlify.toml  package-lock.json  package.json  railway.toml  supabase_setup.sql  vercel.json
migrations/: 001_create_episodes.sql
netlify/functions/: api.js
scripts/: install-stage1.sh  test-features-stage1.sh  test-stage2-features.sh
src/: ai_service.rs  database.rs  handlers.rs  init.rs  main.rs  models.rs  pdf_generator.rs  schema.rs
static/: app.js  index.html  manifest.json  style.css  sw.js
tests/: integration_tests.rs
